<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.pd.chatapp.Login">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:text="@string/login"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="@dimen/edit_text_box_height"
        android:layout_marginBottom="10dp"
        android:background="@android:color/white"
        android:hint="@string/enter_username"
        android:importantForAutofill="no"
        android:inputType="text"
        android:maxLines="1"
        android:padding="8dp"
        android:textColor="@color/primary_text_color"
        android:textColorHint="@color/text_hint_color" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="@dimen/edit_text_box_height"
        android:layout_marginBottom="10dp"
        android:background="@android:color/white"
        android:hint="@string/enter_password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:maxLines="1"
        android:padding="8dp"
        android:textColor="@color/primary_text_color"
        android:textColorHint="@color/text_hint_color" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/login" />

    <TextView
        android:id="@+id/register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/click_here_to_register"
        android:textSize="20sp" />

</LinearLayout>